# OpenXRD

./: .gitignore  LICENSE  README.md  contributing_md.txt  env_example.sh  example_usage.py  github_workflow_ci.txt  index.html  license_file.txt  openxrd_readme.txt  pyproject.toml  pyproject_toml.txt  requirements.txt  requirements_dev.txt  scripts_analyze_subtasks.py  scripts_evaluate_gemini.py  scripts_evaluate_llava.py  scripts_evaluate_openai.py  scripts_run_all_evaluations.py  scripts_visualize_results.py  setup_py.py  src_evaluation.py  src_init.py  src_utils.py
.github/workflows/: pages.yml
datasets/: README.md  benchmarking_questions.json  supporting_textual_materials_expert_reviewed.json  supporting_textual_materials_generated.json
examples/: basic_usage.py
scripts/: install.sh  unzip_dataset.sh
src/openxrd/: __init__.py  cli.py  constants.py  data.py  evaluator.py  providers.py
tests/: test_cli.py  test_data.py  test_evaluator.py  test_scripts.py
